[package]
name = "ravif_py"
version = "0.1.0"
edition = "2024"

[lib]
name = "_ravif_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.0", features = ["extension-module"] }
ravif = { version = "0.13.0", default-features = false, features = ["threading", "asm"] }
rgb = "0.8.52"
imgref = "1.12.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"